Set product available quantity in index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -61,7 +61,7 @@
                       <% else %>
                       <td></td>
                     <% end %>
-                     <td><%= product.in_stock(store_front: current_store_front) %></td>
+                     <td><%= product.available_quantity(store_front: current_store_front) %></td>
 
 
                     <% end %>
