--- a/app/views/store/_searched_products_results.html.erb
+++ b/app/views/store/_searched_products_results.html.erb
@@ -1,7 +1,9 @@
 
 <% @products.each do |product| %>
   <% product.stocks.processed.available.where(store_front: current_store_front).each do |stock| %>
-    <%= render 'store/stock', stock: stock %>
+    <% if stock.balance_for_cart(current_cart) > 0 %>
+      <%= render 'store/stock', stock: stock %>
+    <% end %>
   <% end %>
 <% end %>
 <center><%==pagy_bootstrap_nav(@pagy) %></center>
