Remove sass rails

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,7 @@
 
 
 @import 'overrides';
-
 @import 'adminlte';
-@import 'font-awesome';
+@import "font-awesome";
 @import 'datepicker';
 @import 'chosen';
