--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -23,7 +23,8 @@
       <hr>
       <li class="nav-item active">
         <a href="/insights" class="nav-link <%= 'active' if current_page? insights_path %>">
-          <i class="nav-icon fa fa-line-chart"></i>
+         <i class="nav-icon fa fa-solid fa-bell"></i>
+
           <p>Insights</p>
         </a>
       </li>
