--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -11,8 +11,6 @@
               <tr>
                 <th>Name</th>
                 <th>Role</th>
-                <th>Cash on Hand Account</th>
-                <th>Balance </th>
               </tr>
             </thead>
             <tbody>
@@ -20,12 +18,11 @@
                 <tr>
                   <td><%= link_to employee.name, employee_path(employee) %></td>
                   <td><%= employee.role.try(:titleize) %></td>
-                  <td><%= employee.cash_on_hand_account.try(:name) %></td>
-                  <td><%= number_to_currency employee.cash_on_hand_account.try(:balance) %></td>
                 </tr>
               <% end %>
             </tbody>
           </table>
+          <center><%= will_paginate @employees %></center>
         </div>
       </div>
     </div>
