--- a/app/views/computer_repair_section/work_orders/show.html.erb
+++ b/app/views/computer_repair_section/work_orders/show.html.erb
@@ -102,6 +102,14 @@
               </div>
               <div class="row min-margin">
                 <div class="col-md-6">
+                  <b>Serial #</b>
+                </div>
+                <div class="col-md-6">
+                  <%= @work_order.serial_number %>
+                </div>
+              </div>
+              <div class="row min-margin">
+                <div class="col-md-6">
                   <b>Reported Problem</b>
                 </div>
                 <div class="col-md-6">
