--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
   <ul class="navbar-nav ml-auto">
     <li class="nav-item dropdown">
       <a class="nav-link" data-toggle="dropdown" href="#">
-        <i class="fa-solid fa-user"></i>
+        <%= current_user.first_name %>  <i class="fa-solid fa-user"></i>
       </a>
 
       <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
