--- a/app/views/suppliers/partials/_vouchers.html.erb
+++ b/app/views/suppliers/partials/_vouchers.html.erb
@@ -11,6 +11,7 @@
           <th>Prepared By</th>
           <th>Payable Amount</th>
           <th>Disbursement</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -22,11 +23,18 @@
             <td><%= voucher.preparer_name %></td>
             <td><%= number_to_currency voucher.voucher_amounts.debit.total %></td>
             <td>
-              <% if voucher.disbursed? %>
+              <% if !voucher.disbursed? %>
                 <%= link_to 'Disburse', new_voucher_disbursement_path(voucher), class: "btn btn-primary btm-sm" %>
               <% else %>
                 <span class="badge bg-success"> Disbursed </span>
               <% end %>
+            </td>
+            <td>
+             <% if current_user.proprietor? %>
+                  <%= link_to supplier_voucher_path(supplier_id: @supplier.id, id: voucher.id), method: :delete, data: { confirm: "Are you sure you want to delete this voucher?" } do %>
+                  <i class="fa fa-trash text-danger"></i>
+                  <% end %> &nbsp;
+                <% end %>
             </td>
           </tr>
         <% end %>
