--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,9 +41,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       <div class="float-right d-none d-sm-block-down">
         RBG POS
       </div>
-      <!-- Default to the left -->
-      <strong>Copyright &copy; 2019 <a href="http://rbgtech.online">RBG Computers, Cellshop and Enterprises.</a>.</strong> All rights reserved.
-      <%#= image_tag "easy_reg_logo.png", width: 60, height: 60, class: 'brand-image float-right' %><br>
+      <strong>Copyright &copy; <%=Date.current.year %> <a href="http://rbg-enterprises.com">RBG Computers, Cellshop and Enterprises</a>.</strong> All rights reserved.
+
     </footer>
   </body>
 </html>
