Add maddela sales

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -230,7 +230,7 @@
           </div>
             <div class="card-body">
               <% if current_user.proprietor? %>
-                <% User.sales_clerk.includes(:store_front, :cash_on_hand_account).where(email: ['elmie@rbg.com','analyn.perez@rbg.com','nova@rbg.com', 'jenelyn.lamut@rbg.com', 'jonalyn.lagawe@rbgtech.co', 'dexter.madsale@rbg.com', 'ronald.quirino.sales_clerk@rbg.com']).each do |sales_clerk| %>
+                <% User.sales_clerk.includes(:store_front, :cash_on_hand_account).where(email: ['elmie@rbg.com','analyn.perez@rbg.com','nova@rbg.com', 'jenelyn.lamut@rbg.com', 'jonalyn.lagawe@rbgtech.co', 'nathalie@rbg.com', 'ronald.quirino.sales_clerk@rbg.com']).each do |sales_clerk| %>
                   <div class="row">
                     <div class="col-md-4">
                       <%= sales_clerk.full_name %>
