--- a/app/views/store/_searched_stocks_results.html.erb
+++ b/app/views/store/_searched_stocks_results.html.erb
@@ -1,6 +1,6 @@
 <% @stocks.each do |stock| %>
-  <% if stock.balance_for_cart(current_cart) > 0 %>
+  <%# if stock.balance_for_cart(current_cart) > 0 %>
     <%= render 'store/stock', stock: stock %>
-  <% end %>
+  <%# end %>
 <% end %>
 <center><%==pagy_bootstrap_nav(@pagy) %></center>
