--- a/app/views/repair_services_module/service_payments/index.html.erb
+++ b/app/views/repair_services_module/service_payments/index.html.erb
@@ -16,24 +16,19 @@
               <th>Description</th>
               <th>Amount</th>
               <th>Employee</th>
-              <th></th>
             </tr>
           </thead>
           <tbody>
             <% @service_payments.each do |payment| %>
+              <% work_order = WorkOrder.find_by(receivable_account_id: payment.credit_amounts.pluck(:account_id)) %>
               <tr>
-                <td><%=link_to payment.entry_date.strftime("%B %e, %Y"),computer_repair_section_work_order_path(payment.commercial_document) %></td>
+                <td><%=link_to payment.entry_date.strftime("%B %e, %Y"),computer_repair_section_work_order_path(work_order) %></td>
                 <td><%= payment.commercial_document.try(:customer).try(:name) %></td>
                 <td><%= payment.commercial_document_name %></td>
                 <td><span class="label bg-gray"> <%= payment.commercial_document.try(:formatted_service_number) %></span></td>
                 <td><%= payment.description %></td>
-                <td><%= number_to_currency payment.amount %></td>
+                <td><%= number_to_currency payment.total %></td>
                 <td><%= payment.recorder_name %></td>
-                <td>
-                  <% if current_user.proprietor? %>
-                    <%= link_to 'Delete', entry_path(payment.entry), method: :delete, data: { confirm: "Are you sure you want to delete this entry?" }, class: "btn btn-danger btn-xs" %>
-                  <% end %>
-                </td>
               </tr>
             <% end %>
           </tbody>
