--- a/app/views/cash_accounts/show.html.erb
+++ b/app/views/cash_accounts/show.html.erb
@@ -35,8 +35,8 @@
             <th> REF # </th>
             <th> Employee </th>
             <th> Description </th>
-            <th> Receipt </th>
-            <th> Disburse </th>
+            <th> Debit </th>
+            <th> Credit </th>
             <th> Balance </th>
           </tr>
         </thead>
