--- a/app/views/store_front_module/orders/sales_orders/show.html.erb
+++ b/app/views/store_front_module/orders/sales_orders/show.html.erb
@@ -174,7 +174,8 @@
                     NOTE: Returning an order will mark it as `Sales Return`. The items will be added back to inventory. The cash payment will also be deducted from the sales clerk's cash on hand account.
                   </span>
                   <br>
+                  <hr>
 
-                   <%= link_to 'Return Order', store_front_module_sales_order_path(@order), method: :delete, data: { confirm: "Are you sure you want to delete this Sales Order?" }, class: "btn btn-outline-danger" %>
+                   <%= link_to 'Return Order', store_front_module_sales_order_path(@order), method: :delete, data: { confirm: "Are you sure you want to RETURN this Sales Order?" }, class: "btn btn-outline-danger float-right" %>
                 <% end %>
         <% end %>
