--- a/app/views/store_front_module/line_items/stock_transfer_order_line_item_processings/_stock.html.erb
+++ b/app/views/store_front_module/line_items/stock_transfer_order_line_item_processings/_stock.html.erb
@@ -9,6 +9,8 @@
        <b><%= stock.name.try(:upcase) %></b> <span class="badge bg-success"><%=stock.balance_for_cart_on_transfer(current_cart) %> IN STOCK</span>
        <br>
        <span class="text-muted"><%= stock.barcode %></span><br>
+       <span class="text-muted">IN STOCK <%= stock.available_quantity %></span><br>
+
 
      </div>
      <div class="col-md-4">
